2000-11-14  Daniel Berlin  <dberlin@redhat.com>

	From Kenneth Block <kenneth.block@compaq.com>

        * demangle.c : Use libibery list of demanglers instead of out of
        date local copy.


Wed Nov 15 00:29:46 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From Klaus Espenlaub <espenlaub@informatik.uni-ulm.de>
	* remote.c (_initialize_remote): Call
 	show_memory_write_packet_size when ``show remotewritesize''
 	command.

2000-11-13  Eli Zaretskii <eliz@is.elta.co.il>

	* config/djgpp/config.sed: Fix tweaking "VPATH=.:foo", and handle
        the gettext's posrcprefix correctly with drive letters.

2000-11-10  Jim Blandy  <jimb@redhat.com>

	* stabsread.c (read_range_type): Properly construct complex
	type nodes.

2000-11-10  Fernando Nasser  <fnasser@totem.toronto.redhat.com>

	* symtab.c (decode_line_1, total_number_of_methods, find_methods,
	build_command_line_spec, find_toplevel_char, decode_line_2):
	Move to linespec.c.
	* linespec.c: New file. Routines that handle linespecs, formerly
	in symtab.c.
	* symtab.h: Export find_line_symtab and find_function_start_sal,
	* Makefile.in: Add linespec.c.

2000-11-10  Christopher Faylor <cgf@cygnus.com>

	* inferior.h (step_over_calls_kind): New enum to clarify values in
	step_over_calls.
	* infcmd.c (step_over_calls): Change definition.
	(step_1): Use new enum values in relation to step_over_calls.
	(step_once): Ditto.
	(until_next_command): Ditto.
	* infrun.c (clear_proceed_status): Ditto.
	(handle_inferior_event): Ditto.

2000-11-10  Stephane Carrez  <Stephane.Carrez@sun.com>

	* inferior.h (step_stop_if_no_debug): New variable.
	* infrun.c (step_stop_if_no_debug): Declare.
	(handle_inferior_event): Stop the step command if we entered a function
	without line info.
	(_initialize_infrun): New command 'set step-mode' to control the step
	command.
	* infcmd.c (step_once): Switch to stepi mode if there is no line info
	(and switching is enabled).

2000-11-10  J.T. Conklin  <jtc@redback.com>
